fix : horizontal scrollbar removed

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* globals.css */
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
